# Inquisitor

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md  rustfmt.toml  status.rs
agent/: Cargo.toml  agent.rs  agent_config.yml  agent_processed.rs  build.rs  inquisitor-agent.service  plugin_initialization.rs  plugin_interface.rs  rustfmt.toml  utils.rs
agent/agent_lib/: Cargo.toml  README.md
agent/agent_lib/src/: lib.rs  utils.rs
agent/agent_plugins/: process_counter.rs
agent/agent_plugins/alive/: Cargo.toml  README.md  alive.yml
agent/agent_plugins/alive/src/: lib.rs
agent/agent_plugins/command_runner/: Cargo.toml  command_runner.yml
agent/agent_plugins/command_runner/src/: lib.rs
agent/agent_plugins/file_checker/: Cargo.toml  file_checker.yml
agent/agent_plugins/file_checker/src/: lib.rs
agent/agent_plugins/process_counter/: Cargo.toml  process_counter.yml
agent/agent_plugins/process_counter/src/: lib.rs
agent/agent_plugins/system_monitor/: Cargo.toml  system_monitor.yml
agent/agent_plugins/system_monitor/src/: lib.rs
agent/plugins/: Cargo.toml  README.md  build.rs
agent/plugins/src/: lib.rs  plugin_initialization.rs
agent/src/: agent_config.yml  main.rs  plugin_interface.rs  status.rs
agent/src/plugins/: alive.rs  alive.yml  mod.rs  plugin_initialization.rs
agent/src/plugins/file_checker/: mod.rs
agent_plugins/: alive.rs  alive.yml  command_runner.rs  command_runner.yml  file_checker.rs  file_checker.yml  process_counter.rs  process_counter.yml  system_monitor.rs  system_monitor.yml
endpoints/: main.rs
endpoints/slack/: Cargo.toml  config.yml
endpoints/slack/src/: main.rs
endpoints/webui/: Cargo.toml  config.yml
endpoints/webui/src/: main.rs
endpoints/webui/static/: index.html
endpoints/webui/static/css/: external.css  main.css
endpoints/webui/static/js/: config.js  graph_behavior.js  main.js  plugin_views.js
inquisitor_lib/: Cargo.toml
inquisitor_lib/src/: lib.rs
receptor/: Cargo.toml  build.rs  database.rs  database.sqlite  inquisitor-receptor.service  plugin_interface.rs  receptor.rs  receptor_config.yml  receptor_processed.rs  utils.rs
receptor/plugins/: Cargo.toml  build.rs
receptor/plugins/src/: plugin_initialization.rs
receptor/receptor_lib/: Cargo.toml
receptor/receptor_lib/src/: lib.rs  utils.rs
receptor/receptor_plugins/comparator/: Cargo.toml  comparator.yml
receptor/receptor_plugins/comparator/src/: lib.rs
receptor/receptor_plugins/sync_check/: Cargo.toml  sync_check.rs  sync_check.yml
receptor/receptor_plugins/sync_check/src/: lib.rs
receptor/src/: database.rs  main.rs
receptor_plugins/: sync_check.rs
shared_lib/: Cargo.toml  rustfmt.toml
shared_lib/src/: lib.rs
web_ui/: index.html
web_ui/css/: external.css  graphing.css  main.css
web_ui/js/: config.js  graph_behavior.js  main.js  plugin_views.js
