[package]
name = "inquisitor_agent"
version = "0.3.0"
authors = ["George Hosu <george@cerebralab.com>"]

[dependencies]
serde = "1.0.38"
serde_json = "1.0.14"
tokio = "0.1.5"
log = "0.4.1"
env_logger = "0.5.7"
hostname = "0.1.4"
clap = "2.31.2"

inquisitor_lib = {path="../inquisitor_lib"}
plugins = {path="plugins"}

[workspace]
