[package]
name = "inquisitor_agent"
version = "0.3.0"
authors = ["George Hosu <george@cerebralab.com>"]

[dependencies]
serde = "1.0.43"
serde_derive = "1.0.43"
serde_json = "1.0.16"
tokio = "0.1.5"
log = "0.4.1"
env_logger = "0.5.9"
hostname = "0.1.4"
clap = "2.31.2"

inquisitor_lib = {path="../inquisitor_lib"}
agent_plugins = {path="plugins"}

