[package]
name = "inquisitor_agent"
version = "0.3.1"
authors = ["George Hosu <george@cerebralab.com>"]

[dependencies]
serde = "1.0.53"
serde_derive = "1.0.53"
serde_json = "1.0.17"
tokio = "0.1.6"
log = "0.4.1"
env_logger = "0.5.10"
hostname = "0.1.4"
clap = "2.31.2"

inquisitor_lib = {path="../inquisitor_lib"}
agent_plugins = {path="plugins"}

