[package]
name = "inquisitor_lib"
version = "0.3.0"
authors = ["George Hosu <george@cerebralab.com>"]

[dependencies]
serde = "1.0.37"
serde_derive = "1.0.37"
serde_yaml = "0.7.3"
fs_extra = "1.1.0"
url= "1.7.0"
log = "0.4.1"
sysinfo = "0.5.4"
hyper = "0.11.25"


[dependencies.rusqlite]
version = "0.13.0"
features = ["bundled"]
