[package]
name = "inquisitor_receptor"
version = "0.3.0"
authors = ["George Hosu <george@cerebralab.com>"]

[dependencies]
tokio-core = "0.1.16"
tokio = "0.1.5"
time = "0.1.39"

hyper = "0.11.25"
hyper-staticfile = "0.1.1"

serde = "1.0.37"
serde_derive = "1.0.37"
serde_json = "1.0.13"
yaml-rust = "0.4.0"

fs_extra = "1.1.0"
walkdir = "2.1.4"

log = "0.4.1"
env_logger = "0.5.6"

receptor_lib = {path="receptor_lib"}
plugins = {path="plugins"}

[dependencies.rusqlite]
version = "0.13.0"
features = ["bundled"]

[workspace]
