[package]
name = "inquisitor_receptor"
version = "0.3.1"
authors = ["George Hosu <george@cerebralab.com>"]

[dependencies]
tokio-core = "0.1.17"
tokio = "0.1.6"
time = "0.1.40"

hyper = "0.11.26"
hyper-staticfile = "0.2.0"
url = "1.7.0"

serde = "1.0.53"
serde_derive = "1.0.53"
serde_json = "1.0.17"
yaml-rust = "0.4.0"

fs_extra = "1.1.0"
walkdir = "2.1.4"

log = "0.4.1"
env_logger = "0.5.10"
clap = "2.31.2"

inquisitor_lib = {path="../inquisitor_lib"}
receptor_plugins = {path="plugins"}

[dependencies.rusqlite]
version = "0.13.0"
features = ["bundled"]
