[package]
name = "plugins"
version = "0.3.1"
authors = ["Richard Petrie <rap1011@ksu.edu>"]
build = "build.rs"

[lib]
name = "plugins"
path = "src/lib.rs"

[dependencies]
alive = {path = "../agent_plugins/alive"}
file_checker = {path = "../agent_plugins/file_checker"}
process_counter = {path = "../agent_plugins/process_counter"}
system_monitor = {path = "../agent_plugins/system_monitor"}
command_runner = {path = "../agent_plugins/command_runner"}

inquisitor_lib = {path = "../../inquisitor_lib"}
log = "0.4.1"
env_logger = "0.5.6"

[build-dependencies]
cargo_metadata = "0.5.4"
