[package]
name = "agent_plugins"
version = "0.3.0"
authors = ["Richard Petrie <rap1011@ksu.edu>"]
build = "build.rs"

[lib]
name = "plugins"
path = "src/lib.rs"

[dependencies]
inquisitor_agent_alive = {path = "../agent_plugins/alive"}
inquisitor_agent_file_checker = {path = "../agent_plugins/file_checker"}
inquisitor_agent_process_counter = {path = "../agent_plugins/process_counter"}
inquisitor_agent_system_monitor = {path = "../agent_plugins/system_monitor"}
inquisitor_agent_command_runner = {path = "../agent_plugins/command_runner"}

inquisitor_lib = {path = "../../inquisitor_lib"}
log = "0.4.1"
env_logger = "0.5.6"

[build-dependencies]
cargo_metadata = "0.5.4"
