[package]
name = "slack_endpoint"
version = "0.3.1"
authors = ["George Hosu <george@cerebralab.com>"]

[dependencies]
hyper = "0.11"
tokio-core = "0.1.15"
futures = "0.1.18"
hyper-tls = "0.1.3"
reqwest = "0.8.5"
inquisitor_lib = {path="../../../inquisitor_lib"}

serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"

log = "0.4.0"
env_logger = "0.5.6"
