[package]
name = "slack_endpoint"
version = "0.3.1"
authors = ["George Hosu <george@cerebralab.com>"]

[dependencies]
hyper = "0.11.25"
tokio-core = "0.1.17"
futures = "0.2.1"
hyper-tls = "0.1.3"
reqwest = "0.8.5"
inquisitor_lib = {path="../../inquisitor_lib"}

serde_json = "1.0.16"
serde = "1.0.43"
serde_derive = "1.0.43"

log = "0.4.1"
env_logger = "0.5.9"
