[package]
name = "webui"
version = "0.3.1"
authors = ["George Hosu <george@cerebralab.com>"]

[dependencies]
hyper = "0.11"
hyper-staticfile = "0.1.1"
tokio-core = "0.1.15"
futures = "0.1.18"

serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"

reqwest = "0.8.5"

inquisitor_lib = {path="../../inquisitor_lib"}

log = "0.4.0"
env_logger = "0.5.6"
