[package]
name = "webui"
version = "0.3.1"
authors = ["George Hosu <george@cerebralab.com>"]

[dependencies]
hyper = "0.11.25"
hyper-staticfile = "0.2.0"
tokio-core = "0.1.17"
futures = "0.2.1"

serde_json = "1.0.16"
serde = "1.0.43"
serde_derive = "1.0.43"

reqwest = "0.8.5"

inquisitor_lib = {path="../../inquisitor_lib"}

log = "0.4.1"
env_logger = "0.5.9"
