[package]
name = "plugins"
version = "0.3.1"
authors = ["George Hosu <george@cerebralab.com>"]
build = "build.rs"

[lib]
name = "plugins"
path = "src/lib.rs"

[dependencies]
sync_check = {path = "../receptor_plugins/sync_check"}
comparator = {path = "../receptor_plugins/comparator"}

inquisitor_lib = {path = "../../inquisitor_lib"}
log = "0.4.1"
env_logger = "0.5.6"

[build-dependencies]
cargo_metadata = "0.5.4"
