[package]
name = "receptor_plugins"
version = "0.3.0"
authors = ["George Hosu <george@cerebralab.com>"]
build = "build.rs"

[lib]
name = "plugins"
path = "src/lib.rs"

[dependencies]
inquisitor_receptor_sync_check = {path = "../receptor_plugins/sync_check"}
inquisitor_receptor_comparator = {path = "../receptor_plugins/comparator"}

inquisitor_lib = {path = "../../inquisitor_lib"}
log = "0.4.1"

[build-dependencies]
cargo_metadata = "0.5.4"
