[package]
name = "comparator"
version = "0.3.0"
authors = ["George Hosu <george@cerebralab.com>"]

[dependencies]
receptor_lib = {path="../../receptor_lib"}
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
log = "0.4.0"
env_logger = "0.5.6"

[dependencies.rusqlite]
version = "0.11.0"
features = ["bundled"]
