[package]
name = "inquisitor_receptor_comparator"
version = "0.3.0"
authors = ["George Hosu <george@cerebralab.com>"]

[dependencies]
inquisitor_lib = {path="../../../inquisitor_lib"}
serde_json = "1.0.13"
serde = "1.0.37"
serde_derive = "1.0.37"
log = "0.4.1"
env_logger = "0.5.6"

[dependencies.rusqlite]
version = "0.13.0"
features = ["bundled"]
