[package]
name = "inquisitor_receptor_sync_check"
version = "0.3.0"
authors = ["George Hosu <george@cerebralab.com>"]

[dependencies]
inquisitor_lib = {path="../../../inquisitor_lib"}
serde_json = "1.0.17"
serde = "1.0.53"
serde_derive = "1.0.53"

[dependencies.rusqlite]
version = "0.13.0"
features = ["bundled"]
